--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Protfolio</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <section class="top-banner">
+      <div class="half-weidh">
+        <h1>Welcome to</h1>
+        <h1><span class="orenge-color">My Dreem</span> Mission</h1>
+        <h3>Build Climber and Train Stopper</h3>
+        <p>
+          You might saw me jumping, climbing buildings, and stopping trains. But
+          nobody pays me a dime for that work. That's why I am learning and
+          mastering web development. I will not stop until I become the Web
+          Development Hero.
+        </p>
+        <a
+          target="_blank"
+          href="https://github.com/ProgrammingHero1/developer-portfolio"
+          >Hire Me</a
+        >
+      </div>
+      <div class="half-weidh">
+        <img src="images/jhankar.png" alt="" />
+      </div>
+    </section>
+  </body>
 </html>
