--- a/index.html
+++ b/index.html
@@ -29,5 +29,22 @@
         <img src="images/jhankar.png" alt="" />
       </div>
     </section>
+
+    <section class="dreem-big">
+      <div class="half-weidh">
+        <img src="images/jhankar2.png" alt="" />
+      </div>
+
+      <div class="half-weidh">
+        <h1>Dreem Big</h1>
+        <h3>Become a web developer</h3>
+        <p>
+          I already learned the basic HTML and CSS. I can build any simple
+          website. I can even teach my grandma how to make simple website. My
+          goal is to build 3 websites and learn advanced topics.
+        </p>
+        <a href="#" target="_blank">DOWNLOAD CV</a>
+      </div>
+    </section>
   </body>
 </html>
